--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -33,13 +33,13 @@
     <div class="col-8">
         <tabset class="member-tabset">
             <tab heading='About {{member.knownAs}}'>
-                <h4>Description</h4>
+                <h4 *ngIf="member.introduction">Description</h4>
                 <p>{{member.introduction}}</p>
-                <h4>Looking for</h4>
+                <h4 *ngIf="member.lookingFor">Looking for</h4>
                 <p>{{member.lookingFor}}</p>
             </tab>
             <tab heading='Interests'>
-                <h4>Interests</h4>
+                <h4 *ngIf="member.interests">Interests</h4>
                 <p>{{member.interests}}</p>
             </tab>
             <tab heading='Photos'>
