Refresh Token and Messages Component Pagination

--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -1,15 +1,15 @@
 <div class="row mb-4">
     <div class="btn-group" name='container'>
         <button class="btn btn-primary" btnRadio='Unread' [(ngModel)]="container" 
-            (click)="loadMessages()">
+            (click)="changeTabs()">
             <i class="fa fa-envelope"></i> Unread
         </button>
         <button class="btn btn-primary" btnRadio='Inbox' [(ngModel)]="container" 
-            (click)="loadMessages()">
+            (click)="changeTabs()">
             <i class="fa fa-envelope-open"></i> Inbox
         </button>
         <button class="btn btn-primary" btnRadio='Outbox' [(ngModel)]="container" 
-            (click)="loadMessages()">
+            (click)="changeTabs()">
             <i class="fa fa-paper-plane"></i> Outbox
         </button>
     </div>
