--- a/client/src/app/_forms/text-input/text-input.component.html
+++ b/client/src/app/_forms/text-input/text-input.component.html
@@ -5,13 +5,13 @@
         [formControl]="ngControl.control"
         placeholder={{label}}>
     <div *ngIf="ngControl.control.errors?.required" class="invalid-feedback">
-        Please enter a {{label}}
+        Please enter your {{label}}
     </div>
     <div *ngIf="ngControl.control.errors?.minlength" class="invalid-feedback">
-        {{label}} must be at least {{ngControl.control.errors.minlength['requiredLength']}}
+        {{label}} must be at least {{ngControl.control.errors.minlength['requiredLength']}} characters
     </div>
     <div *ngIf="ngControl.control.errors?.maxlength" class="invalid-feedback">
-        {{label}} must be at least {{ngControl.control.errors.maxlength['requiredLength']}}
+        {{label}} must be at most {{ngControl.control.errors.maxlength['requiredLength']}} characters
     </div>
     <div *ngIf="ngControl.control.errors?.isMatching" class="invalid-feedback">
         Passwords do not match
