--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -12,6 +12,7 @@
     </div>
     <app-text-input [formControl]='registerForm.controls["username"]' [label]='"Username"'></app-text-input>
     <app-text-input [formControl]='registerForm.controls["knownAs"]' [label]='"Known As"'></app-text-input>
+    <app-text-input [formControl]='registerForm.controls["email"]' [label]='"Email"'></app-text-input>
     <app-date-input [formControl]='registerForm.controls["dateOfBirth"]'
         [label]='"Date Of Birth"' [maxDate]='maxDate'></app-date-input>
     <app-text-input [formControl]='registerForm.controls["city"]' [label]='"City"'></app-text-input>
@@ -21,7 +22,7 @@
     <app-text-input [formControl]='registerForm.controls["confirmPassword"]' [label]='"Confirm Password"' 
         [type]='"password"'></app-text-input>
 
-    <div class="row mt-5" *ngIf="validationErrors.length > 0">
+    <div class="row" *ngIf="validationErrors.length > 0">
         <ul class="text-danger">
             <li *ngFor="let error of validationErrors">
                 {{error}}
@@ -34,6 +35,3 @@
         <button class="btn btn-default mr-2" (click)="cancel()" type="button">Cancel</button>
     </div>
 </form>
-
-<!-- <p>Form value: {{registerForm.value | json}}</p>
-<p>Form value: {{registerForm.status | json}}</p> -->
