--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -16,7 +16,7 @@
                 <li *appHasRole='["Admin", "Moderator"]' class="nav-item">
                     <a class="nav-link" routerLink='/admin' routerLinkActive='active'>Admin</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item" *ngIf="!isProd">
                     <a class="nav-link" routerLink='/errors' routerLinkActive='active'>Errors</a>
                 </li>
             </ng-container>
